# DL_Face_Recognition

./: .gitignore  sdkconfig
Application/Client/: .gitignore  README.md  angular.json  app.js  licence.txt  package-lock.json  package.json
Application/Client/src/: index.html
Application/Client/src/app/: _nav.ts  app.component.ts  app.module.ts  app.routing.ts
Application/Client/src/app/containers/default-layout/: default-layout.component.html
Application/Client/src/app/views/error/: 404.component.html  500.component.html
Application/Client/src/app/views/logs/: logs-routing.module.ts  logs.component.html  logs.component.scss  logs.component.ts  logs.module.ts
Application/Client/src/classes/: baudrate.spec.ts  baudrate.ts  device-info.ts  log.spec.ts  log.ts  port.spec.ts  port.ts
Application/Client/src/services/: chat.service.ts  dataservice.service.ts  http.service.ts  log-store.service.spec.ts  log-store.service.ts
components/detector/: CMakeLists.txt  detection.cpp
components/detector/include/: detection.h
components/recognizer/: CMakeLists.txt  recognizer.cpp
components/recognizer/include/: recognizer.h
components/tools/: CMakeLists.txt  utils.cpp
main/: CMakeLists.txt  global_defs.h  main.cpp  main.h
main/application/: CMakeLists.txt  application.h  face_recognition.cpp  recognition_evaluation.cpp
main/camera/: app_camera_esp.c
main/http/: app_mdns.c  app_mdns.h
main/websocket/: CMakeLists.txt  websocket.cc  websocket.h
